--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,36 +3,47 @@
 #
 cmake_minimum_required (VERSION 3.15)
 
-project ("CMakeLibTop")
+project ("CMakeTopLib")
+
 include(CMakePackageConfigHelpers)
+include(GNUInstallDirs)
+
+find_package(cmake-static-lib CONFIG REQUIRED)
 
 # Add source to this project's executable.
-add_library (${PROJECT_NAME} STATIC "CMakeLibTop.cpp" )
-add_library(CMakeLibTop::CMakeLibTop ALIAS CMakeLibTop)
+add_library(CMakeTopLib src/CMakeTopLib.cpp )
+add_library(CMakeTopLib::CMakeTopLib ALIAS CMakeTopLib)
 
-set (PUBLIC_INC_DIR include)
+if(BUILD_SHARED_LIBS AND WIN32)
+	target_compile_definitions(CMakeTopLib
+		PRIVATE "CMAKETOPLIB_EXPORT=__declspec(dllexport)"
+		INTERFACE "CMAKETOPLIB_EXPORT=__declspec(dllimport)")
+endif()
+
+target_compile_features(CMakeTopLib PUBLIC cxx_std_17)
+target_include_directories(CMakeTopLib
+	PUBLIC
+		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+target_link_libraries(CMakeTopLib PRIVATE CMakeStaticLib::CMakeStaticLib)
+
+configure_package_config_file(cmake/config.cmake.in
+	${CMAKE_CURRENT_BINARY_DIR}/cmake-top-lib-config.cmake
+	INSTALL_DESTINATION ${CMAKE_INSTALL_DATADIR}/cmake-top-lib
+	NO_SET_AND_CHECK_MACRO)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PUBLIC_INC_DIR})
 
-# TODO: Add tests and install targets if needed.
-
-configure_package_config_file(cmake/config.cmake.in
-	${CMAKE_CURRENT_BINARY_DIR}/CMakeLibTop-config.cmake
-	INSTALL_DESTINATION ${CMAKE_INSTALL_DATADIR}/CMakeLibTop
-	NO_SET_AND_CHECK_MACRO)
-
-
-install(TARGETS ${PROJECT_NAME} EXPORT CMakeLibTop-targets)
-install(DIRECTORY ${PUBLIC_INC_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(
 	FILES
-		${CMAKE_CURRENT_BINARY_DIR}/CMakeLibTop-config.cmake
+		${CMAKE_CURRENT_BINARY_DIR}/cmake-top-lib-config.cmake
 	DESTINATION
-		${CMAKE_INSTALL_DATADIR}/CMakeLibTop)
+		${CMAKE_INSTALL_DATADIR}/cmake-top-lib)
 
-
-message (STATUS "!!!! CMAKE_INSTALL_PREFIX: '${CMAKE_INSTALL_PREFIX}' !!!!")
-message (STATUS "!!!! CMAKE_INSTALL_INCLUDEDIR: '${CMAKE_INSTALL_INCLUDEDIR}' !!!!")
-message (STATUS "!!!! CMAKE_CURRENT_SOURCE_DIR: '${CMAKE_CURRENT_SOURCE_DIR}' !!!!")
-#install(DIRECTORY include  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-
+install(TARGETS CMakeTopLib EXPORT cmake-top-lib-targets)
+install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(EXPORT cmake-top-lib-targets
+	NAMESPACE CMakeTopLib::
+	DESTINATION ${CMAKE_INSTALL_DATADIR}/cmake-top-lib)
