--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,11 +1,15 @@
 {
-	"default-registry": null,
+	"default-registry": {
+		"kind": "git",
+		"repository": "git-matterfi@odroidH2:repos/VcpkgPortsMirror.git",
+		"baseline": "6635b69bd9682bdfdd49af6fdffc3e5966f76ed7"
+	},
 	"registries" : [
 		{
 			"kind": "git",
 			"repository": "git-matterfi@odroidH2:repos/VcpkgPortProject.git",
-			"baseline": "9a20775a9aec8bcbc89b01761f84064dfa6eaa79",
-			"packages": [ "cmake-static-lib" ]
+			"baseline": "abcec3bc32e3f4ea84a0e0b9339dc6c914a46711",
+			"packages": [ "cmake-static-lib", "cmake-top-lib" ]
 		}
 	]
 }
