fix in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,6 @@ else()
     endif()
 endif()
 
-project ("CMakeTopLib")
-
 # check if triplets directory exists
 if (NOT DEFINED VCPKG_OVERLAY_TRIPLETS)
     message (FATAL_ERROR "!!!! TRIPLET DEFINITION LOCATION IS NOT SPECFIED !!!!")
@@ -36,6 +34,16 @@ endif()
 if (NOT DEFINED VCPKG_FEATURE_FLAGS)
     message (FATAL_ERROR "!!!! VCPKG manifest and register mode is not enabled !!!!")
 endif()
+
+# TEST_BEGIN
+message (STATUS "!!!! Inside cmake-top-lib cmake - BEGIN !!!!")
+message (STATUS "!!!! CMAKE_TOOLCHAIN_FILE: '${CMAKE_TOOLCHAIN_FILE}' !!!!")
+message (STATUS "!!!! VCPKG_OVERLAY_TRIPLETS: '${VCPKG_OVERLAY_TRIPLETS}' !!!!")
+message (STATUS "!!!! VCPKG_TARGET_TRIPLET: '${VCPKG_TARGET_TRIPLET}' !!!!")
+message (STATUS "!!!! Inside cmake-top-lib cmake - BEGIN !!!!")
+# TEST_END
+
+project ("CMakeTopLib")
 
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
