--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -2,3 +2,7 @@
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake-top-lib-targets.cmake)
 check_required_components(CMakeTopLib)
+if (MSVC)
+    message (STATUS "!!!!@@ checking CMakeTopLib-asan @@!!!!")
+    check_required_components(CMakeTopLib-asan)
+endif()
