--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -12,8 +12,7 @@
 			"packages": [
 				"cmake-static-lib",
 				"cmake-top-lib",
-				"matterfi-cmake",
-				"gtest"
+				"matterfi-cmake"
 			]
 		}
 	]
